--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,3 +122,14 @@ font-size: 60px;
    padding-left: 400px;
     width: 100%;
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color:#F781BE;
+    color: white;
+    text-align: center;
+    font-size: 30px;
+ }
